k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-server
            port:
              number: 8000
  - host: grafana.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 8008
---
# Service to expose Prometheus on port 8000
apiVersion: v1
kind: Service
metadata:
  name: prometheus-server-8000
  namespace: monitoring
spec:
  type: NodePort
  ports:
  - port: 8000
    targetPort: 9090
    nodePort: 30800
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/component: server
---
# Service to expose Grafana on port 8008
apiVersion: v1
kind: Service
metadata:
  name: grafana-8008
  namespace: monitoring
spec:
  type: NodePort
  ports:
  - port: 8008
    targetPort: 3000
    nodePort: 30808
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: grafana
